--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+
+.field {
+  flex-direction: column;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.fieldNumber {
+  /*outline: 1px solid #ccc;*/
+  width: 50px;
+  height: 50px;
+  font-size: 32px;
+  line-height: 50px;
+}
+
+button {
+  border: 0;
+  font-size: 24px;
+  padding: 12px 24px;
+  border-radius: 4px;
+  background: #008CBA;
+  color: #fff;
+  box-shadow: none;
+}
+
+button + button {
+  margin-left: 12px;
+}
